<resources>
    <string name="app_name">Projeto</string>
    <!-- Strings related to login page -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar ou Registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Esse endereço de email é inválido.</string>
    <string name="error_invalid_password">Essa senha é muito pequena</string>
    <string name="error_incorrect_password">Essa senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Permissões de Contato são necessárias para possibilitar completar e-mails."</string>
    <string name="action_register">Registrar</string>
    <string name="action_sobre">Sobre</string>

    <!-- Strings related to sobre page -->
    <string name="tema">Tema</string>
    <string name="petshop">Petshop</string>
    <string name="objetivo">Objetivo</string>
    <string name="objetivo_content">Ajudar na gestão do negócio, aprimorar o relacionamento com o cliente,
        otimizar o tempo do empresário e clientes, expansão do lucro e maior alcance de clientes.</string>
    <string name="desenvolvedores">Desenvolvedores</string>
    <string name="nome_leandro">Leandro Augusto Mioto da Silva</string>
    <string name="ra_leandro">2840481713020</string>
    <string name="nome_leonardo">Leonardo Abaque Coelho</string>
    <string name="ra_leonardo">2840481713021</string>

    <!-- Strings related to menu -->
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="nav_header_title">Nosso Petshop</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="mItem_agendamento">Agendamento</string>
    <string name="mItem_servicosPrestados">Serviços Prestados</string>
    <string name="mItem_cadastroServicos">Cadastro de Serviços</string>
    <string name="mItem_findus">Encontre-nos</string>
    <string name="mItem_conta">Conta</string>
    <string name="mItem_sair">Sair</string>

    <!--Strings da página de serviços-->
    <string name="btn_banho_tosa">Banho e Tosa</string>
    <string name="btn_adestramento">Adestramento</string>
    <string name="btn_serv_medicos">Seviços Médicos</string>
    <string name="btn_hospedagem">Hospedagem</string>

    <string name="adestramento_content">Existem diversos tipos de adestramentos que podem ser oferecidos. Assim como, existem animais que possuem maiores propensões para cada um deles.
No entanto, o adestramento em domicílio mais comum é o de educação, que busca corrigir distúrbios comportamentais. E esse qualquer cão pode participar.
Vale salientar, que em qualquer dessas categorias, os donos também precisam passar por uma preparação para que o serviço funcione e se perpetue no comportamento do pet.
Algumas das principais categorias de adestramento são: Caça, Condução, Educação, Exibição, Pastoreamento, Proteção e Salvamento</string>

    <string name="banho_tosa_content">O banho e tosa de cães são ferramentas importantes para manter a saúde do cãozinho e evitar problemas de saúde tanto do animal, quanto do seu dono.
         Pulgas, carrapatos e todo tipo de bactéria ou doença de pelos e pele podem ser facilmente evitadas para que o dono não precise gastar mais tendo que tratá-las.</string>

    <string name="hospedagem_content">Um animal de estimação não pode ficar sozinho por muito tempo e por isso muitos donos deixam de viajar. Mas no pet shop também pode haver o serviço de hospedagem,
        ou o famoso hotel para cachorro. A partir do pagamento de diárias você pode deixar o seu bichinho lá sabendo que ele será bem atendido e terá a companhia de outros bichinhos na hora da recreação.</string>

    <string name="serv_medicos_content">Veterinários também estão presentes em pet shop e efetuam tanto o serviço de consultas marcadas como o de atendimento em pronto socorro.
        Alguns desses estabelecimentos ficam abertos 24h e estarão disponíveis caso ocorra um problema durante a madrugada, um final de semana ou feriado e o veterinário que atende o seu bichinho não esteja disponível. Vele alertar que o valor de uma consulta pode ser muito alto, então se o seu animal tiver plano de saúde, vale a pena procurar um local que aceite.</string>

    <!--Strings da página de agendamento-->
    <string name="title_agendamento">Agendamento</string>
    <string name="legenda_servicos">Serviços</string>
    <string name="btn_add">Add</string>
    <string name="legenda_radios">Transporte do Animal</string>
    <string name="txt_ou">ou</string>
    <string name="rdb_busca">Busque</string>
    <string name="rdb_levar">Levarei</string>
    <string name="legenda_adcicionais">Adicionais*</string>
    <string name="legenda_data">Data*</string>
    <string name="obs_adicionais">alguns adicionais podem não estar disponível para o(s) serviço(s) selecionado(s)</string>
    <string name="obs_data">sujeito a aprovação</string>
    <string name="chk_gravatinha_dobro">Gravatinha em dobro</string>
    <string name="chk_treinamento_rapido">Treinamento rápido</string>
    <string name="btn_finaliza">Agendar</string>

    <!-- Strings relarionadas a pagina de sucesso-->
    <string name="txt_sucesso">Sucesso</string>
    <string name="btn_confirma">Confirma</string>
    <string name="txt_switch">Deseja receber notificações sobre seu agendamento?</string>

    <!-- Strings do cadastro de servicos-->
    <string name="txt_descricao">Descrição</string>
    <string name="txt_preco">Preço</string>
    <string name="title_activity_maps">Map</string>
</resources>
