<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agendamento"
            android:icon="@drawable/baseline_schedule_24"
            android:title="@string/mItem_agendamento" />
        <item
            android:id="@+id/nav_servicos_prestados"
            android:icon="@drawable/baseline_grade_24"
            android:title="@string/mItem_servicosPrestados" />

        <item
            android:id="@+id/nav_cadastro_servicos"
            android:icon="@drawable/baseline_add_circle_outline_24"
            android:title="@string/mItem_cadastroServicos" />

        <item
            android:id="@+id/nav_find_us"
            android:icon="@drawable/baseline_location_on_24"
            android:title="@string/mItem_findus" />
    </group>

    <item android:title="@string/mItem_conta">
        <menu>
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/baseline_close_24"
                android:title="@string/mItem_sair" />
        </menu>
    </item>

</menu>
