<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".view.AgendamentoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legenda_servicos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spn_servicos"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

                <Button
                    android:id="@+id/btn_add_servico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/btn_add"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_servicos_agendados"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2mm"
                android:layout_margin="5dp"
                android:background="@color/colorGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legenda_radios" />

            <RadioGroup
                android:id="@+id/rdg_transporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdb_busque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdb_busca"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/txt_ou" />

                <RadioButton
                    android:id="@+id/rdb_leve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdb_levar"
                    android:textSize="12dp" />
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2mm"
                android:layout_margin="5dp"
                android:background="@color/colorGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legenda_adcicionais" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obs_adicionais"
                android:textSize="8dp" />

            <CheckBox
                android:id="@+id/ckb_gravatinha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_gravatinha_dobro"
                android:textSize="12dp" />

            <CheckBox
                android:id="@+id/ckb_treinamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_treinamento_rapido"
                android:textSize="12dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2mm"
                android:layout_margin="5dp"
                android:background="@color/colorGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legenda_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obs_data"
                android:textSize="8dp" />

            <EditText
                android:id="@+id/edt_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_finaliza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/btn_finaliza"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>